--- a/webapp/view/Create.view.xml
+++ b/webapp/view/Create.view.xml
@@ -28,93 +28,93 @@
       columnsL="1"
       columnsM="1"
       singleContainerFullSize="false"
-    >
-                <Label text="Codigo" />         
-                <Text
+    > 
+      <Label text="Codigo" />         
+      <Text
         id="inpCodigo"
-        text="{
-                            path: 'view>/Codigo',
-                            type: 'sap.ui.model.type.Integer',
-                            constraints:{
-                                minimum:0
-                            }
-                        }"
+        text="{ path: 'view>/Codigo',
+                  type: 'sap.ui.model.type.Integer',
+                  constraints:{
+                      minimum:0
+                  }
+              }"
       />
-                <Label text="Descricao" />      <Input id="inpDescricao" />
+      <Label text="Descricao" />
+      <Input id="inpDescricao" />
                 
-                <Label text="Quantidade" />     
-                <Input
+      <Label text="Quantidade" />     
+      <Input
         id="inpKwmeng"
         value="{
-                            path: 'view>/Kwmeng',
-                            type: 'sap.ui.model.type.Float',
-                            formatOptions:{
-                              minFractionDigits:2,
-                              maxFractionDigits:2
-                            },
-                            constraints:{
-                                minimum:0,
-                                precision:13,
-                                scale:3
-                            }
-                        }"
+                path: 'view>/Kwmeng',
+                type: 'sap.ui.model.type.Float',
+                formatOptions:{
+                  minFractionDigits:3,
+                  maxFractionDigits:3
+                },
+                constraints:{
+                    minimum:0,
+                    precision:13,
+                    scale:3
+                }
+            }"
       />
                 
-                <Label text="UM" />             
-                <Input id="inpMeins" />
-                
-                <Label text="Preço Unitário" /> 
-                <Input
+      <Label text="UM" />             
+      <Input id="inpMeins" />
+      
+      <Label text="Preço Unitário" />
+      <Input
         id="inpNetpr"
         value="{
-                            path: 'view>/Netpr',
-                            type: 'sap.ui.model.type.Float',
-                            formatOptions:{
-                              minFractionDigits:2,
-                              maxFractionDigits:2
-                            },
-                            constraints:{
-                                minimum:0,
-                                precision:13,
-                                scale:3
-                            }
-                        }"
+              path: 'view>/Netpr',
+              type: 'sap.ui.model.type.Float',
+              formatOptions:{
+                minFractionDigits:2,
+                maxFractionDigits:2
+              },
+              constraints:{
+                  minimum:0,
+                  precision:13,
+                  scale:3
+              }
+          }"
       />
 
-                <Label text="Moeda" />          
-                <Input id="inpWaerk" />
+      <Label text="Moeda" />          
+      <Input id="inpWaerk" />
 
-        <Label text="Data Modificação" /> 
-        <DatePicker
-        value="{
-                            path: 'DataCadastro', 
-                            type: 'sap.ui.model.type.Date',
-                            formatOptions: {
-                                pattern: 'dd/MM/yyyy' ,
-                                UTC: true }
-                      }"
+      <Label text="Data Cadastro" /> 
+      <DatePicker
+        value="{ 
+                path: 'DataCadastro',  
+                type: 'sap.ui.model.type.Date',
+                formatOptions: {
+                    pattern: 'dd/MM/yyyy' ,
+                    UTC: true }
+              }"
         id="inpDataCadastro"
       /> 
-        <Label text="Hora Modificação" /> 
-        <Input
+      <Label text="Hora Cadastro" /> 
+      <Input
         value="{
-                    path: 'HoraCadastro',
-                    type: 'sap.ui.model.type.Time',
-                      formatOptions: {
-                        style: 'short'
-                      }
-                  }"
+                path: 'HoraCadastro',
+                type: 'sap.ui.model.type.Time',
+                  formatOptions: {
+                    style: 'short'
+                  }
+              }"
         id="inpHoraCadastro"
       />
 
-        </f:SimpleForm>
+      </f:SimpleForm>
 
-        <footer>
-            <OverflowToolbar>
-                <ToolbarSpacer />
-                <Button type="Accept" text="Gravar" press="onGravar" />
-                <Button type="Reject" text="Cancelar" press="onCancelar " />
-            </OverflowToolbar>
-        </footer>
+      <footer>
+        <OverflowToolbar>
+          <ToolbarSpacer />
+          <Button type="Accept" text="Gravar" press="onGravar" />
+          <Button type="Reject" text="Cancelar" press="onCancelar " />
+        </OverflowToolbar>
+      </footer>
   </Page> 
 </mvc:View>
