--- a/webapp/view/Worklist.view copy.xml
+++ b/webapp/view/Worklist.view copy.xml
@@ -84,20 +84,17 @@
                     <Column id="netprColumn" hAlign="End">
                         <Text text="Preço Líquido" id="netprColumnLabel" />
                     </Column>
-
                     <Column id="dataCadastroColumn" hAlign="End">
                         <Text text="Data Cadastro" id="dataCadastroLabel" />
                     </Column>
-
                     <Column id="horaCadastroColumn" hAlign="End">
                         <Text text="Hora Cadastro" id="horaCadastroLabel" />
                     </Column>
-
-                    <Column hAlign="End">
-                      <Button
-              icon="{= ${Aprovado} === true ? 'sap-icon://accept' : 'sap-icon://approve'}"
-              press="onAprovarProduto"
-            />
+                    <Column id="col5" hAlign="End">
+                      <Text text="Aprovado" id="idcol5" />
+                    </Column>
+                    <Column id="col6" hAlign="End">
+                        <Text text="Status Venda" id="idcol6" />
                     </Column>
                         <Column hAlign="End">
                       <Text text="Deletar" />
@@ -105,56 +102,69 @@
                 </columns>
 
                 <items>
-                    <ColumnListItem type="Navigation" press=".onPress">
-                        <cells>
-                            <ObjectIdentifier title="{Codigo}" />
-                            <Text text="{Descricao}" />
-                            <ObjectNumber
+                  <ColumnListItem type="Navigation" press=".onPress">
+                    <cells>
+                        <ObjectIdentifier title="{Codigo}" />
+                        <Text text="{Descricao}" />
+                        <ObjectNumber
                 type='sap/ui/model/type/Decimal'
                 number="{Kwmeng}"
                 unit="{Meins}"
                 state="{
-                                parts: [
-                                  {path: 'Kwmeng'}
-                                ],
-                                formatter: '.formatter.formatarValor'
-                              }"
+                        parts: [
+                          {path: 'Kwmeng'}
+                        ],
+                        formatter: '.formatter.formatarValor'
+                      }"
               />
-                            <ObjectNumber
+              <ObjectNumber
                 number="{
-                                path: 'Netpr',
-                                formatter: '.formatter.currencyUnit'
-                              }"
+                          path: 'Netpr',
+                          formatter: '.formatter.currencyUnit'
+                        }"
                 unit="{Waerk}"
               />
-                            <ObjectIdentifier
+              <ObjectIdentifier
                 title="{
-                              path: 'DataCadastro',
-                              type: 'sap.ui.model.type.Date',
-                              formatOptions: {
-                                style: 'short',
-                                UTC: true
-                              }
-                            }"
+                        path: 'DataCadastro',
+                        type: 'sap.ui.model.type.Date',
+                        formatOptions: {
+                          style: 'short',
+                          UTC: true
+                        }
+                      }"
               />
                             <ObjectIdentifier
                 title="{
-                              path: 'HoraCadastro',
-                              type: 'sap.ui.model.odata.type.Time',
-                              formatOptions: {
-                                style: 'short',
-                                pattern: 'HH:MM:SS'
-                              }
-                            }"
+                        path: 'HoraCadastro',
+                        type: 'sap.ui.model.odata.type.Time',
+                        formatOptions: {
+                          style: 'short',
+                          pattern: 'HH:MM:SS'
+                        }
+                      }"
               />
                             <Button
                 icon="{= ${Aprovado} === true ? 'sap-icon://accept' : 'sap-icon://approve'}"
                 press="onAprovarProduto"
               />
-                            <Button
-                icon="sap-icon://delete"
-                press="onDeletar"
-              />
+              <MenuButton
+                text="Status"
+                buttonMode="Split"
+                defaultAction="onDefaultAction"
+              >
+                <menu>
+                  <Menu itemSelected="onMenuAction">
+                    <MenuItem text="Novo" icon="sap-icon://edit" />
+                    <MenuItem text="Em análise" icon="sap-icon://save" />
+                    <MenuItem text="Aprovado" icon="sap-icon://accept" />
+                    <MenuItem text="Rejeitado" icon="sap-icon://decline" />    
+                    <MenuItem text="Pendências" icon="sap-icon://pending" />
+                  </Menu>
+                </menu>
+              </MenuButton>
+
+              <Button icon="sap-icon://delete" press="onDeletar" />
                         </cells>
                     </ColumnListItem>
                 </items>
